--- a/common/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/common/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -91,7 +91,7 @@
   "item.simplyswords.molten_edge": "Molten Edge",
   "item.simplyswords.livyatan": "Livyatan",
   "item.simplyswords.icewhisper": "Icewhisper",
-  "item.simplyswords.arcanethyst": "Arcanethyst (%d / 3)",
+  "item.simplyswords.arcanethyst": "Arcanethyst",
   "item.simplyswords.thunderbrand": "Thunderbrand",
 
   "item.simplyswords.runic_tablet": "Runic Tablet",
