--- a/common/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/common/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -488,7 +488,7 @@
   "item.simplyswords.volcanicfurysworditem.tooltip4": "Channel your fury, exchanging health to",
   "item.simplyswords.volcanicfurysworditem.tooltip5": "gain resistance, whilst causing tremors",
   "item.simplyswords.volcanicfurysworditem.tooltip6": "that pull enemies towards you.",
-  "item.simplyswords.volcanicfurysworditem.tooltip7": "Activate again to unleash your fury,",
+  "item.simplyswords.volcanicfurysworditem.tooltip7": "Stop channelling to unleash your fury,",
   "item.simplyswords.volcanicfurysworditem.tooltip8": "launching, igniting, and dealing more",
   "item.simplyswords.volcanicfurysworditem.tooltip9": "damage the longer the channel.",
 
