Greater variants of some existing Runic Powers added Balance adjustments to some Runic Powers

--- a/common/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/common/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -469,6 +469,7 @@
   "item.simplyswords.awakening": "Awakening LV: %d ",
   "item.simplyswords.awakening.exp": "Awakening XP: %d%% ",
   "item.simplyswords.awakening.powers": "Awakened Powers:",
+  "item.simplyswords.greater_runic_power": "Greater",
 
 
 
