Brought in line with 1.19.3 build Config options expanded Runic Effects expanded Small balance changes

--- a/common/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/common/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -469,6 +469,7 @@
   "item.simplyswords.awakening": "Awakening LV: %d ",
   "item.simplyswords.awakening.exp": "Awakening XP: %d%% ",
   "item.simplyswords.awakening.powers": "Awakened Powers:",
+  "item.simplyswords.greater_runic_power": "Greater",
 
 
 
@@ -681,6 +682,9 @@
   "item.simplyswords.frostwardsworditem.tooltip1": "Runic Power: Frost Ward",
   "item.simplyswords.frostwardsworditem.tooltip2": "Regularly fires movement impairing",
   "item.simplyswords.frostwardsworditem.tooltip3": "snowballs at all nearby enemies.",
+  "item.simplyswords.momentumsworditem.tooltip1": "Runic Power: Momentum",
+  "item.simplyswords.momentumsworditem.tooltip2": "Gain a brief moment of strong",
+  "item.simplyswords.momentumsworditem.tooltip3": "forward momentum.",
   "item.simplyswords.unidentifiedsworditem.tooltip1": "Runic Power: ????",
   "item.simplyswords.unidentifiedsworditem.tooltip2": "Click to identify.",
 
