--- a/common/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/common/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -695,6 +695,10 @@
   "item.simplyswords.wardsworditem.tooltip2": "Sacrifice half your current HP to gain",
   "item.simplyswords.wardsworditem.tooltip3": "pulsing absorption relative to your",
   "item.simplyswords.wardsworditem.tooltip4": "remaining HP for 6 seconds.",
+  "item.simplyswords.immolationsworditem.tooltip1": "Runic Power: Immolation",
+  "item.simplyswords.immolationsworditem.tooltip2": "Gain an aura of immolation, periodically",
+  "item.simplyswords.immolationsworditem.tooltip3": "damaging you and nearby foes. Outgoing ",
+  "item.simplyswords.immolationsworditem.tooltip4": "damage scales with your current HP.",
   "item.simplyswords.unidentifiedsworditem.tooltip1": "Runic Power: ????",
   "item.simplyswords.unidentifiedsworditem.tooltip2": "Click to identify.",
 
