Image for Immolation status effect added Trailblaze runic description updated to reflect hte lack of fire resistance

--- a/common/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/common/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -668,8 +668,8 @@
   "item.simplyswords.stoneskinsworditem.tooltip2": "Chance on hit to increase your",
   "item.simplyswords.stoneskinsworditem.tooltip3": "resistance at the cost of speed.",
   "item.simplyswords.trailblazesworditem.tooltip1": "Runic Power: Trailblaze",
-  "item.simplyswords.trailblazesworditem.tooltip2": "Chance on hit to gain fire resistance ",
-  "item.simplyswords.trailblazesworditem.tooltip3": "and speed while igniting yourself.",
+  "item.simplyswords.trailblazesworditem.tooltip2": "Chance on hit to gain speed and ",
+  "item.simplyswords.trailblazesworditem.tooltip3": "ignite yourself.",
   "item.simplyswords.weakensworditem.tooltip1": "Runic Power: Weaken",
   "item.simplyswords.weakensworditem.tooltip2": "Chance on hit to slow and",
   "item.simplyswords.weakensworditem.tooltip3": "weaken your target.",
