Further implementation of rune sockets on unique weapons Added Echo effect

--- a/common/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/common/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -653,57 +653,75 @@
 
 
   "item.simplyswords.levitationsworditem.tooltip1": "Runic Power: Float",
+  "item.simplyswords.uniquesworditem.runefused_power.float": "[ Runefused: Float ]",
   "item.simplyswords.levitationsworditem.tooltip2": "Chance on hit to reverse the effects",
   "item.simplyswords.levitationsworditem.tooltip3": "of gravity on your target.",
   "item.simplyswords.speedsworditem.tooltip1": "Runic Power: Swiftness",
+  "item.simplyswords.uniquesworditem.runefused_power.swiftness": "[ Runefused: Swiftness ]",
   "item.simplyswords.speedsworditem.tooltip2": "Chance on hit to increase the wielders",
   "item.simplyswords.speedsworditem.tooltip3": "movespeed for a duration.",
   "item.simplyswords.slownesssworditem.tooltip1": "Runic Power: Slow",
+  "item.simplyswords.uniquesworditem.runefused_power.slow": "[ Runefused: Slow ]",
   "item.simplyswords.slownesssworditem.tooltip2": "Chance on hit to slow the target",
   "item.simplyswords.slownesssworditem.tooltip3": "for a duration.",
   "item.simplyswords.freezesworditem.tooltip1": "Runic Power: Freeze",
+  "item.simplyswords.uniquesworditem.runefused_power.freeze": "[ Runefused: Freeze ]",
   "item.simplyswords.freezesworditem.tooltip2": "Chance on hit to chill or freeze your target.",
   "item.simplyswords.wildfiresworditem.tooltip1": "Runic Power: Wildfire",
+  "item.simplyswords.uniquesworditem.runefused_power.wildfire": "[ Runefused: Wildfire ]",
   "item.simplyswords.wildfiresworditem.tooltip2": "Chance on hit to ignite all nearby ",
   "item.simplyswords.wildfiresworditem.tooltip3": "entities of the same type as your target.",
   "item.simplyswords.zephyrsworditem.tooltip1": "Runic Power: Zephyr",
+  "item.simplyswords.uniquesworditem.runefused_power.zephyr": "[ Runefused: Zephyr ]",
   "item.simplyswords.zephyrsworditem.tooltip2": "Chance on hit to gain attack and move",
   "item.simplyswords.zephyrsworditem.tooltip3": "speed.",
   "item.simplyswords.shieldingsworditem.tooltip1": "Runic Power: Shielding",
+  "item.simplyswords.uniquesworditem.runefused_power.shielding": "[ Runefused: Shielding ]",
   "item.simplyswords.shieldingsworditem.tooltip2": "Chance on hit to gain",
   "item.simplyswords.shieldingsworditem.tooltip3": "absorption.",
   "item.simplyswords.stoneskinsworditem.tooltip1": "Runic Power: Stoneskin",
+  "item.simplyswords.uniquesworditem.runefused_power.stoneskin": "[ Runefused: Stoneskin ]",
   "item.simplyswords.stoneskinsworditem.tooltip2": "Chance on hit to increase your",
   "item.simplyswords.stoneskinsworditem.tooltip3": "resistance at the cost of speed.",
   "item.simplyswords.trailblazesworditem.tooltip1": "Runic Power: Trailblaze",
+  "item.simplyswords.uniquesworditem.runefused_power.trailblaze": "[ Runefused: Trailblaze] ",
   "item.simplyswords.trailblazesworditem.tooltip2": "Chance on hit to gain speed and ",
   "item.simplyswords.trailblazesworditem.tooltip3": "ignite yourself.",
   "item.simplyswords.weakensworditem.tooltip1": "Runic Power: Weaken",
+  "item.simplyswords.uniquesworditem.runefused_power.weaken": "[ Runefused: Weaken ]",
   "item.simplyswords.weakensworditem.tooltip2": "Chance on hit to slow and",
   "item.simplyswords.weakensworditem.tooltip3": "weaken your target.",
   "item.simplyswords.unstablesworditem.tooltip1": "Runic Power: Unstable",
+  "item.simplyswords.uniquesworditem.runefused_power.unstable": "[ Runefused: Unstable ]",
   "item.simplyswords.unstablesworditem.tooltip2": "Regularly apply random effects",
   "item.simplyswords.unstablesworditem.tooltip3": "to the wielder.",
   "item.simplyswords.activedefencesworditem.tooltip1": "Runic Power: Active Defence",
+  "item.simplyswords.uniquesworditem.runefused_power.activedefence": "[ Runefused: Active defence ]",
   "item.simplyswords.activedefencesworditem.tooltip2": "Regularly fires arrows at nearby",
   "item.simplyswords.activedefencesworditem.tooltip3": "enemies (Requires Arrows).",
   "item.simplyswords.frostwardsworditem.tooltip1": "Runic Power: Frost Ward",
+  "item.simplyswords.uniquesworditem.runefused_power.frostward": "[ Runefused: Frost Ward ]",
   "item.simplyswords.frostwardsworditem.tooltip2": "Regularly fires movement impairing",
   "item.simplyswords.frostwardsworditem.tooltip3": "snowballs at all nearby enemies.",
   "item.simplyswords.momentumsworditem.tooltip1": "Runic Power: Momentum",
+  "item.simplyswords.uniquesworditem.runefused_power.momentum": "[ Runefused: Momentum ]",
   "item.simplyswords.momentumsworditem.tooltip2": "Gain a brief moment of strong",
   "item.simplyswords.momentumsworditem.tooltip3": "forward momentum.",
   "item.simplyswords.imbuedsworditem.tooltip1": "Runic Power: Imbued",
+  "item.simplyswords.uniquesworditem.runefused_power.imbued": "[ Runefused: Imbued ]",
   "item.simplyswords.imbuedsworditem.tooltip2": "Chance on hit to deal additional",
   "item.simplyswords.imbuedsworditem.tooltip3": "magic damage, scaling with durability.",
   "item.simplyswords.pincushionsworditem.tooltip1": "Runic Power: Pincushion",
+  "item.simplyswords.uniquesworditem.runefused_power.pincushion": "[ Runefused: Pincushion ]",
   "item.simplyswords.pincushionsworditem.tooltip2": "Deal additional damage for each",
   "item.simplyswords.pincushionsworditem.tooltip3": "arrow stuck in your body.",
   "item.simplyswords.wardsworditem.tooltip1": "Runic Power: Ward",
+  "item.simplyswords.uniquesworditem.runefused_power.ward": "[ Runefused: Ward ]",
   "item.simplyswords.wardsworditem.tooltip2": "Sacrifice half your current HP to gain",
   "item.simplyswords.wardsworditem.tooltip3": "pulsing absorption relative to your",
   "item.simplyswords.wardsworditem.tooltip4": "remaining HP for 6 seconds.",
   "item.simplyswords.immolationsworditem.tooltip1": "Runic Power: Immolation",
+  "item.simplyswords.uniquesworditem.runefused_power.immolation": "[ Runefused: Immolation ]",
   "item.simplyswords.immolationsworditem.tooltip2": "Gain an aura of immolation, periodically",
   "item.simplyswords.immolationsworditem.tooltip3": "damaging you and nearby foes. Outgoing ",
   "item.simplyswords.immolationsworditem.tooltip4": "damage scales with your current HP.",
