--- a/common/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/common/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -103,6 +103,11 @@
   "item.simplyswords.awakened_lichblade": "Awakened Lichblade",
   "item.simplyswords.shadowsting": "Shadowsting",
   "item.simplyswords.harbinger": "Harbinger",
+  "item.simplyswords.sunfire": "Sunfire",
+  "item.simplyswords.dormantrelic": "Dormant Relic",
+  "item.simplyswords.taintedrelic": "Tainted Relic",
+  "item.simplyswords.righteousrelic": "Righteous Relic",
+
 
   "item.simplyswords.runic_tablet": "Runic Tablet",
   "item.simplyswords.runefused_gem": "Runefused Gem",
@@ -662,10 +667,22 @@
   "item.simplyswords.shadowmistsworditem.tooltip5": "and shadowstep to a nearby location.",
 
   "item.simplyswords.harbingersworditem.tooltip1": "Unique Effect: Abyssal Standard",
-  "item.simplyswords.harbingersworditem.tooltip2": "Summons an Abyssal Battle Standard that",
-  "item.simplyswords.harbingersworditem.tooltip3": "pulls, damages, and slows enemies whilst",
-  "item.simplyswords.harbingersworditem.tooltip4": "periodically granting haste to players",
-  "item.simplyswords.harbingersworditem.tooltip5": "within its vicinity.",
+  "item.simplyswords.harbingersworditem.tooltip2": "Chance on hit to inflict weakness.",
+  "item.simplyswords.harbingersworditem.tooltip3": "Summons an Abyssal Battle Standard that",
+  "item.simplyswords.harbingersworditem.tooltip4": "pulls, damages, and slows enemies whilst",
+  "item.simplyswords.harbingersworditem.tooltip5": "periodically granting haste to players",
+  "item.simplyswords.harbingersworditem.tooltip6": "within its vicinity.",
+
+  "item.simplyswords.sunfiresworditem.tooltip1": "Unique Effect: Righteous Standard",
+  "item.simplyswords.sunfiresworditem.tooltip2": "Chance on hit to regenerate health.",
+  "item.simplyswords.sunfiresworditem.tooltip3": "Summons an Righteous Battle Standard that",
+  "item.simplyswords.sunfiresworditem.tooltip4": "ignites, damages, and slows enemies whilst",
+  "item.simplyswords.sunfiresworditem.tooltip5": "periodically granting streangth and health",
+  "item.simplyswords.sunfiresworditem.tooltip6": "to players within its vicinity.",
+
+  "item.simplyswords.dormantrelicsworditem.tooltip2": "A faint power seems to emanate from within.",
+  "item.simplyswords.poweredrelicsworditem.tooltip2": "A growing power seems to emanate from within.",
+
 
 
   "item.simplyswords.levitationsworditem.tooltip1": "Runic Power: Float",
